--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -44,177 +44,129 @@ qproperty-diameter: 20;
        <number>0</number>
       </property>
       <widget class="QWidget" name="page33">
-       <layout class="QGridLayout" name="gridLayout_20" rowstretch="0,0,0,0,0,0" columnstretch="0,1,3">
-        <item row="1" column="2">
-         <layout class="QGridLayout" name="gridLayout_19">
-          <item row="1" column="7">
-           <spacer name="horizontalSpacer_17">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="1" rowspan="3">
-           <layout class="QGridLayout" name="gridLayout_33">
-            <item row="1" column="2">
-             <widget class="StateLabel" name="lblTorque_Extremal_Max33">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLabel" name="label_110">
-              <property name="text">
-               <string>Наибольшее за сессию</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLabel" name="label_109">
-              <property name="text">
-               <string>Последнее испытание</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <widget class="StateLabel" name="lblTorque_Extremal_Last33">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item row="0" column="7">
-           <widget class="ActionButton" name="actionbutton">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Machine
-on</string>
-            </property>
-            <property name="indicator_option" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="indicator_status_option" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="is_estopped_status" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="estop_action" stdset="0">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2" rowspan="3">
-           <spacer name="horizontalSpacer_16">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="1" column="6">
-           <widget class="LED" name="ledPos_Is_On33">
-            <property name="color">
-             <color>
-              <red>252</red>
-              <green>233</green>
-              <blue>79</blue>
-             </color>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3" colspan="4">
-           <widget class="PushButton" name="btnDevice_On33">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(138, 226, 52);</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>40</width>
-              <height>40</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="3" colspan="3">
-           <widget class="LED" name="ledLoad_Is_On33">
-            <property name="color">
-             <color>
-              <red>252</red>
-              <green>233</green>
-              <blue>79</blue>
-             </color>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="3" colspan="4">
-           <widget class="PushButton" name="btnDevice_Off33">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(239, 41, 41);</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>40</width>
-              <height>40</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0" rowspan="3">
-           <widget class="LED" name="ledEnable33">
-            <property name="minimumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">qproperty-color: green;
+       <layout class="QGridLayout" name="gridLayout_20" rowstretch="0,0,0,0,0,0,0" columnstretch="0,1,3">
+        <item row="1" column="1" colspan="2">
+         <widget class="QWidget" name="wgtHeader" native="true">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>10</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QWidget#wgtHeader {
+	background-color: rgb(114, 159, 207);
+}</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_9">
+           <item row="0" column="4">
+            <widget class="ActionButton" name="actionbutton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>АВ ОСТ</string>
+             </property>
+             <property name="indicator_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="indicator_status_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="is_estopped_status" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="estop_action" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="0" column="3">
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Fixed</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>60</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_136">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">font: 15pt bold;</string>
+             </property>
+             <property name="text">
+              <string>3.3 Измерение момента страгивания</string>
+             </property>
+             <property name="margin">
+              <number>5</number>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="LED" name="ledEnable33">
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">qproperty-color: green;
 qproperty-off_color: red;
-qproperty-diameter: 70;</string>
-            </property>
-            <property name="diameter">
-             <number>70</number>
-            </property>
-            <property name="off_color" stdset="0">
-             <color>
-              <red>255</red>
-              <green>0</green>
-              <blue>0</blue>
-             </color>
-            </property>
-           </widget>
-          </item>
-         </layout>
+qproperty-diameter: 40;</string>
+             </property>
+             <property name="diameter">
+              <number>40</number>
+             </property>
+             <property name="off_color" stdset="0">
+              <color>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
+              </color>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
         </item>
-        <item row="0" column="0" rowspan="6">
+        <item row="0" column="0" rowspan="7">
          <widget class="QWidget" name="widget" native="true">
           <property name="styleSheet">
            <string notr="true">#widget {
@@ -377,7 +329,112 @@ font: bold</string>
           </layout>
          </widget>
         </item>
-        <item row="1" column="1" rowspan="5">
+        <item row="2" column="2">
+         <layout class="QGridLayout" name="gridLayout_19">
+          <item row="0" column="1" rowspan="3">
+           <layout class="QGridLayout" name="gridLayout_33">
+            <item row="1" column="2">
+             <widget class="StateLabel" name="lblTorque_Extremal_Max33">
+              <property name="text">
+               <string>---</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_110">
+              <property name="text">
+               <string>Наибольшее за сессию</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLabel" name="label_109">
+              <property name="text">
+               <string>Последнее испытание</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="StateLabel" name="lblTorque_Extremal_Last33">
+              <property name="text">
+               <string>---</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item row="0" column="6">
+           <widget class="LED" name="ledLoad_Is_On33">
+            <property name="color">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="6">
+           <widget class="LED" name="ledPos_Is_On33">
+            <property name="color">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2" rowspan="3">
+           <spacer name="horizontalSpacer_16">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="7" rowspan="2">
+           <widget class="PushButton" name="btnDevice_Off33">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(239, 41, 41);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3" rowspan="2" colspan="3">
+           <widget class="PushButton" name="btnDevice_On33">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(138, 226, 52);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="1" rowspan="5">
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -840,33 +897,7 @@ font: bold</string>
           </item>
          </layout>
         </item>
-        <item row="0" column="1" colspan="2">
-         <widget class="QLabel" name="label_136">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(114, 159, 207);
-font: 15pt bold;</string>
-          </property>
-          <property name="text">
-           <string>3.3 Измерение момента страгивания</string>
-          </property>
-          <property name="margin">
-           <number>5</number>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="2">
+        <item row="4" column="2">
          <widget class="QToolBox" name="toolBox">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -889,7 +920,7 @@ font: 15pt bold;</string>
              <x>0</x>
              <y>0</y>
              <width>589</width>
-             <height>566</height>
+             <height>622</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1135,7 +1166,7 @@ font: 15pt bold;</string>
              <x>0</x>
              <y>0</y>
              <width>589</width>
-             <height>566</height>
+             <height>622</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1185,7 +1216,7 @@ font: 15pt bold;</string>
              <x>0</x>
              <y>0</y>
              <width>589</width>
-             <height>566</height>
+             <height>622</height>
             </rect>
            </property>
            <attribute name="label">
